Add write permissions to PRs for the CI workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,8 @@ jobs:
   run-windup-test:
     name: Run windup tests
     runs-on: ubuntu-20.04
+    permissions:
+      pull-requests: write
     strategy:
       fail-fast: false
     steps:
