--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,13 +4,12 @@ on:
   workflow_dispatch:
   pull_request:
 
+permissions: write-all
+
 jobs:
   run-windup-test:
     name: Run windup tests
     runs-on: ubuntu-20.04
-    permissions:
-      pull-requests: write
-      issues: write
     strategy:
       fail-fast: false
     steps:
