--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,14 +2,14 @@ name: 'Run windup integration tests'
 
 on:
   workflow_dispatch:
-  pull_request:
-
-permissions: write-all
+  pull_request_target:
 
 jobs:
   run-windup-test:
     name: Run windup tests
     runs-on: ubuntu-20.04
+    permissions:
+      pull-requests: write
     strategy:
       fail-fast: false
     steps:
