--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,7 @@ name: 'Run windup integration tests'
 on:
   workflow_dispatch:
   pull_request_target:
+  pull_request:
 
 jobs:
   run-windup-test:
