--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,4 +30,5 @@ jobs:
     - name: Create comment
       uses: thollander/actions-comment-pull-request@v2
       with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         filePath: pass_rate
