--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,6 @@
 name: 'Run windup integration tests'
 
-on:
-  workflow_dispatch:
-  pull_request_target:
-  pull_request:
+on: [ pull_request_target ]
 
 jobs:
   run-windup-test:
