--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,13 +1,15 @@
 name: 'Run windup integration tests'
-# Why are you doing this to me
+
 on:
   workflow_dispatch:
   pull_request_target:
+
 jobs:
   run-windup-test:
     name: Run windup tests
     runs-on: ubuntu-20.04
-    permissions: write-all
+    permissions:
+      pull-requests: write
     strategy:
       fail-fast: false
     steps:
@@ -25,13 +27,6 @@ jobs:
     - name: Run windup tests
       run: (docker run testing test -fail-fast /windup-rulesets/rules/rules-reviewed/ | tee output.log) && tail -n1 output.log > pass_rate
     - name: Create comment
-      uses: actions/github-script@v5
+      uses: thollander/actions-comment-pull-request@v2
       with:
-        github-token: ${{secrets.GITHUB_TOKEN}}
-        script: |
-          github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: "$(cat pass_rate)"
-          })
+        filePath: pass_rate
