--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v3
+      with:
+        ref: refs/pull/${{ github.event.number }}/merge
     - name: Checkout tools repo
       uses: actions/checkout@v3
       with:
