--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: 'Run windup integration tests'
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
 
 jobs:
   run-windup-test:
@@ -15,8 +15,6 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v3
-      with:
-        ref: refs/pull/${{ github.event.number }}/merge
     - name: Checkout tools repo
       uses: actions/checkout@v3
       with:
