--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,9 +27,10 @@ jobs:
     - name: Run windup tests
       run: (docker run testing test /windup-rulesets/rules/rules-reviewed/ | tee output.log) && tail -n1 output.log > pass_rate && echo "MESSAGE=$(cat pass_rate)" >> $GITHUB_ENV
     - name: Post result to PR
-      uses: mshick/add-pr-comment@v1
+      uses: mshick/add-pr-comment@v2
       with:
         message: ${{ env.MESSAGE }}
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         repo-token-user-login: 'github-actions[bot]' # The user.login for temporary GitHub tokens
         allow-repeats: true
+        proxy-url: https://add-pr-comment-proxy-94idvmwyie-uc.a.run.app
