--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,8 +9,7 @@ jobs:
   run-windup-test:
     name: Run windup tests
     runs-on: ubuntu-20.04
-    permissions:
-      pull-requests: write
+    permissions: write-all
     strategy:
       fail-fast: false
     steps:
