--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
       run: >
         mkdir -p artifacts &&
         echo "Overall success rate: 74.20% (1651/2225)" > artifacts/message.md &&
-        echo "pass_rate='$(cat /artifacts/message.md)' >> $GITHUB_ENV"
+        echo "pass_rate='$(cat artifacts/message.md)' >> $GITHUB_ENV"
     - run: echo "${{ env }}" && echo "${{ env.pass_rate }}"
     - name: Update pass rate badge
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/workflow-testing' }}
