--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,8 +19,14 @@ jobs:
         echo "action_state=yellow" >> $GITHUB_ENV &&
         mkdir -p artifacts &&
         echo "Overall success rate: 74.20% (1651/2225)" > artifacts/message.md &&
+        echo "PASS_RATE='Overall success rate: 74.20% (1651/2225)'" >> GITHUB_ENV &&
+        echo "PASS_RATE2=Overall success rate: 74.20% (1651/2225)" >> GITHUB_ENV &&
         echo "pass_rate=$(cat artifacts/message.md) >> $GITHUB_ENV"
-    - run: echo "${{ env }}" && echo "${{ env.pass_rate }}" && echo "${{ env.action_state }}"
+    - run: >
+        echo "${{ env.pass_rate }}" &&
+        echo "${{ env.PASS_RATE }}" &&
+        echo "${{ env.PASS_RATE2 }}" &&
+        echo "${{ env.action_state }}"
     - name: Update pass rate badge
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/workflow-testing' }}
       uses: RubbaBoy/BYOB@v1.3.0
