--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,10 +17,10 @@ jobs:
       id: run-windup-test
       run: >
         mkdir -p artifacts &&
-        echo "74.20% (1651/2225)" > artifacts/message.md &&
-        echo 'PASS_RATE=74.20%' >> GITHUB_ENV &&
-        echo 'PASS_RATE2=74.20% (1651/2225)' >> GITHUB_ENV &&
-        echo "'pass_rate=\"$(cat artifacts/message.md)\"'" >> $GITHUB_ENV &&
+        echo "Overall success rate: 74.20% (1651/2225)" > artifacts/message.md &&
+        echo 'PASS_RATE=74.20%' >> $GITHUB_ENV &&
+        echo 'PASS_RATE2=74.20% (1651/2225)' >> $GITHUB_ENV &&
+        echo "pass_rate=\"$(cat artifacts/message.md)\"" >> $GITHUB_ENV &&
         cat $GITHUB_ENV
     - run: >
         echo "${{ env.pass_rate }}" &&
