--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,14 +18,9 @@ jobs:
       run: >
         mkdir -p artifacts &&
         echo "Overall success rate: 74.20% (1651/2225)" > artifacts/message.md &&
-        echo 'PASS_RATE=74.20%' >> $GITHUB_ENV &&
-        echo 'PASS_RATE2=74.20% (1651/2225)' >> $GITHUB_ENV &&
-        echo "pass_rate=\"$(cat artifacts/message.md)\"" >> $GITHUB_ENV &&
-        cat $GITHUB_ENV
+        echo "pass_rate=\"$(cat artifacts/message.md)\"" >> $GITHUB_ENV
     - run: >
         echo "${{ env.pass_rate }}" &&
-        echo "${{ env.PASS_RATE }}" &&
-        echo "${{ env.PASS_RATE2 }}" &&
         cat artifacts/message.md
     - name: Update pass rate badge
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/workflow-testing' }}
