--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,9 +28,9 @@ jobs:
       id: run-windup-test
       run: >
         mkdir -p artifacts &&
-        (docker run testing test /windup-rulesets/rules/rules-reviewed/ | tee output.log) && 
+        (docker run testing test /windup-rulesets/rules/rules-reviewed/ | tee output.log) &&
         tail -n1 output.log > artifacts/message.md &&
-        echo "##[set-output name=pass_rate;]$(cat /artifacts/message.md)"
+        echo "pass_rate=\"$(cat artifacts/message.md)\"" >> $GITHUB_ENV
     - name: Save PR message as artifact
       uses: actions/upload-artifact@v1
       with:
@@ -41,7 +41,7 @@ jobs:
       uses: RubbaBoy/BYOB@v1.3.0
       with:
         NAME: windup-pass-rate
-        LABEL: 'Windup Pass Rate'
-        STATUS: ${{ steps.run-windup-test.outputs.pass_rate }}
+        LABEL: 'Current status'
+        STATUS: ${{ env.pass_rate }}
         COLOR: blue
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
