:ghost: update to latest analyzer
Signed-off-by: Pranav Gaikwad <pgaikwad@redhat.com>

--- a/.github/workflows/multi-arch_images_build.yaml
+++ b/.github/workflows/multi-arch_images_build.yaml
@@ -31,6 +31,7 @@ jobs:
         pre_build_cmd: |
           TAG=${GITHUB_REF_NAME/main/latest}
           sed -i "s,FROM quay.io/konveyor/analyzer-lsp,FROM quay.io/konveyor/analyzer-lsp:${TAG}," core.Dockerfile
+          sed -i "s,FROM quay.io/konveyor/java-external-provider,FROM quay.io/konveyor/java-external-provider:${TAG}," core.Dockerfile
         quay_publish_robot: ${{ secrets.QUAY_PUBLISH_ROBOT }}
         quay_publish_token: ${{ secrets.QUAY_PUBLISH_TOKEN }}
         ref: ${{ github.ref }}
