--- a/.github/workflows/multi-arch_images_build.yaml
+++ b/.github/workflows/multi-arch_images_build.yaml
@@ -28,10 +28,8 @@ jobs:
         image_name: "windup-shim"
         image_namespace: "konveyor"
         image_registry: "quay.io"
-        pre_build_cmd: |
-          TAG=${GITHUB_REF_NAME/main/latest}
-          sed -i "s,FROM quay.io/konveyor/analyzer-lsp.*,FROM quay.io/konveyor/analyzer-lsp:${TAG}," core.Dockerfile
-          sed -i "s,FROM quay.io/konveyor/java-external-provider.*,FROM quay.io/konveyor/java-external-provider:${TAG}," core.Dockerfile
+        extra-args: |
+          --build-arg VERSION=${{ github.ref_name == 'main' && 'latest' || github.ref_name }}
         quay_publish_robot: ${{ secrets.QUAY_PUBLISH_ROBOT }}
         quay_publish_token: ${{ secrets.QUAY_PUBLISH_TOKEN }}
         ref: ${{ github.ref }}
